[gd_scene load_steps=2 format=3 uid="uid://c8jard0jvmfmt"]

[ext_resource type="Script" path="res://addons/very-simple-twitch/chat/vst_chat_dock.gd" id="1_fkddh"]

[node name="VstChatDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fkddh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Channel name"

[node name="ConnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "CONNECT"

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "CLEAR CHAT"

[node name="DisconnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "DISCONNECT"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Chat" type="Panel" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer/Chat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatMessageContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/Chat/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="MessageLineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "SEND"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ConnectButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/MessageLineEdit" to="." method="_on_message_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
